--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action (walkthrough step 1).md
@@ -32,6 +32,6 @@ Detailed explanation (dynamical geometry):
   - The background adds no force; departures from straight motion arise only from these intersections with emitted fields (including self-hits when kinematics allow).
 
 - Physical picture:
-  - Picture many expanding spherical “skins.” A push occurs only when a skin arrives, directed straight along the radius back to its emission point, with strength falling as $1/r^2$ and dimmed by the source and receiver speeds.
+  - Picture many expanding spherical “skins.” A push occurs only when a skin arrives, directed straight along the radius back to its emission point, with strength falling as $1/r^2$ and dimmed by the source speed.
 
 If you’d like to continue, next up are “Units and constants” (the $v=1$ convention, coupling $\kappa$, regularization width $\eta$) and the formal definition of the causal interaction set $\mathcal{C}_o(t)$.
