--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.5 - Kinetic and Potential Energy.md
@@ -36,7 +36,7 @@ The model adheres to the principle of energy conservation through a continuous e
     $$
     q_{\mathrm{eff}}(t_0) = \frac{q}{1 + |\mathbf{v}_a(t_0)|}
     $$
-    This creates a fundamental feedback loop. As a particle gains kinetic energy (accelerates), the per-wavefront amplitude and the receiver’s response are reduced by the speed modulation. This self-regulating mechanism helps maintain overall energy balance and prevents runaway behavior.
+    This creates a fundamental feedback loop. As a particle gains kinetic energy (accelerates), the per-wavefront amplitude is reduced by the speed modulation on the emitter. Receiver velocity does not diminish the force magnitude; it only affects instantaneous power via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$ along the radial component. This self-regulating mechanism helps maintain overall energy balance and prevents runaway behavior.
 
 ### Total Energy vs. Apparent Energy and Momentum
 
