--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.9 - Perspective.md
@@ -21,18 +21,17 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 
 ---
 
-## 2) Velocity-modulated emission and reception: a built-in energy regulator
+## 2) Velocity-modulated emission: a built-in energy regulator
 
 - What we assume:
   - Emission cadence is constant; the effective per-wavefront amplitude is $q_{\mathrm{eff}}(t_0)=\dfrac{q}{1+|v_{\text{source}}(t_0)|}$.
-  - Receiver response is likewise modulated by $1/(1+|v_{\text{receiver}}(t)|)$.
   - Canonical per-hit law:
     $$
-    a_{o′\leftarrow o} \propto \sigma_{q_o q_{o′}}\,\frac{|q_o q_{o′}|}{r^2\,\big(1+|v_o|\big)\,\big(1+|v_{o′}|\big)}\,\hat{\mathbf{r}}.
+    a_{o′\leftarrow o} \propto \sigma_{q_o q_{o′}}\,\frac{|q_o q_{o′}|}{r^2\,\big(1+|v_o|\big)}\,\hat{\mathbf{r}}.
     $$
 
 - Why it matters:
-  - Emission cadence never changes: Architrinos are transceivers and emit wavefronts at a constant rate. What changes with speed is the per-wavefront amplitude (q_eff) and the receiver’s response factor. This modulation provides negative feedback that reduces runaway behavior, enables shielding in assemblies, and helps establish stable operating points.
+  - Emission cadence never changes: Architrinos are transceivers and emit wavefronts at a constant rate. What changes with speed is only the per-wavefront amplitude (q_eff) on the emitter side. This modulation provides negative feedback that reduces runaway behavior, enables shielding in assemblies, and helps establish stable operating points. Receiver motion influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v}$ through the radial component $v_r$.
   - Energetics become tractable: with η-mollification ($\delta\to\delta_\eta$), you can define $\Phi_\eta$ and verify $\Delta E_k = -\,\Delta U$ on resolved intervals while still taking $\eta\to 0$ for sharp impulses.
 
 ---
@@ -118,7 +117,7 @@ We work throughout in units with field speed $v=1$; per-hit accelerations are pu
 - Use $\Phi_\varepsilon$ to evaluate $U$ and verify $\Delta E_k = -\,\Delta U$ across events that cross the symmetry point; in the $\varepsilon\to 0$ limit, impulses integrate to the same work.
 
 4) Numerical recipe (robust, minimal assumptions)
-- For each receiver time $t$: (i) root-find causal emission times $t_0$ for all sources (and self), (ii) discard non-physical roots ($H(0)=0$, handle $r=0$ by symmetry), (iii) sum $a_{o′\leftarrow o}(t;t_0)$ with the canonical modulation, (iv) integrate velocity and position with an event-aware scheme. Use $\varepsilon$-thickening for smooth integration when needed.
+- For each receiver time $t$: (i) root-find causal emission times $t_0$ for all sources (and self), (ii) discard non-physical roots ($H(0)=0$, handle $r=0$ by symmetry), (iii) sum $a_{o′\leftarrow o}(t;t_0)$ with the canonical emitter-only modulation, (iv) integrate velocity and position with an event-aware scheme. Use $\varepsilon$-thickening for smooth integration when needed.
 
 ---
 
