--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -106,7 +106,7 @@ Canonical per-hit acceleration:
 $$
 a_{o′\leftarrow j}(t; t_0)
 = \kappa\,\sigma_{q_j q_{o′}}\,
-\frac{|q_j q_{o′}|}{r^2\,(1 + \|\mathbf{v}_j(t_0)\|)\,(1 + \|\mathbf{v}_{o′}(t)\|)}\,\hat{\mathbf{r}}.
+\frac{|q_j q_{o′}|}{r^2\,(1 + \|\mathbf{v}_j(t_0)\|)}\,\hat{\mathbf{r}}.
 $$
 
 Total acceleration:
@@ -115,10 +115,10 @@ $$
 $$
 
 Notes:
-- Emission cadence is constant; only per-wavefront amplitude and receiver response are speed-modulated.
+- Emission cadence is constant; only per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s velocity influences only instantaneous power via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - No cross products, no right-hand-rule magnetism; every per-hit action is along $\hat{\mathbf{r}}$.
 
-Plain language: For each past emission that can reach you now, push along the line back to where it came from, weaken the push by both sides’ speeds and by 1/r², then add all pushes.
+Plain language: For each past emission that can reach you now, push along the line back to where it came from, weaken the push by the emitter’s speed and by 1/r², then add all pushes.
 
 Receiver velocity decomposition (instantaneous):
 - Decompose the receiver velocity relative to $\hat{\mathbf{r}}$:
@@ -162,7 +162,7 @@ Plain language: With slightly thick shells, the usual “force is minus gradient
 - $\epsilon = |e|/6$ is the unit charge magnitude; Electrino $q=-\epsilon$, Positrino $q=+\epsilon$.
 - $\kappa>0$ universal coupling.
 - $\eta>0$ mollifier width (regularization parameter).
-- $\large q_{\mathrm{eff}}(t_0) = \dfrac{q}{1 + \lvert v_{\text{source}}(t_0)\rvert}$ (per-wavefront amplitude); receiver modulation $\large \dfrac{1}{1 + \lvert v_{\text{receiver}}(t)\rvert}$.
+- $\large q_{\mathrm{eff}}(t_0) = \dfrac{q}{1 + \lvert v_{\text{source}}(t_0)\rvert}$ (per-wavefront amplitude; emission cadence is constant). Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - $r$, $\hat{\mathbf{r}}$ as above; $H$ is the Heaviside step function with $H(0)=0$.
 
 Plain language: Fix units so the field speed is one; use ε as the basic charge; faster motion dims per-wavefront amplitude and response, not cadence.
@@ -182,4 +182,4 @@ Plain language: Fix units so the field speed is one; use ε as the basic charge;
 - After formal definitions, add a brief “Plain language” sentence.
 - Use consistent symbol set: $\mathcal{C}_j(t)$, $r$, $\hat{\mathbf{r}}$, $v$, $\epsilon$, $\kappa$.
 - Equation tags (optional): (CT) causal-time, (EOM) equation of motion, (REG) regularization, (ENER) energetics.
-- Phrase velocity effects as “per-wavefront amplitude and receiver response modulation; emission cadence is constant.”
+- Phrase velocity effects as “per-wavefront amplitude modulated by the emitter’s speed; emission cadence is constant.”
