--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -48,7 +48,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     - Unlike charges ($\sigma=-1$): attraction along $\hat{\mathbf{r}}$.
     - Stationary source: symmetry implies purely radial action; no tangential component.
 
-    In plain language: for each qualifying earlier emission, draw the line from where it was emitted to where the receiver is now, push along that line with a strength set by the charges, both objects’ speeds, and a $1/r^2$ falloff, then add up all such pushes.
+    In plain language: for each qualifying earlier emission, draw the line from where it was emitted to where the receiver is now, push along that line with a strength set by the charges, the emitter’s speed, and a $1/r^2$ falloff, then add up all such pushes.
 
 ### Receiver velocity: radial vs orthogonal components (instantaneous effect)
 
@@ -91,7 +91,7 @@ while preserving total emission $q_{\text{eff}}$. This produces continuous-in-ti
     $$
     \Phi_{\text{net}} = \sum_{i} \Phi_i
     $$
-    The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and speed modulations), which makes local sources dominate.
+    The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and emitter-side speed modulation), which makes local sources dominate.
 
 -   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction arises when the causal set $\,\mathcal{C}_a(t)\,$ for $o'=o$ is nonempty; this can occur when $|\mathbf{v}_a| \ge v$ at some past time or due to curvature of the path allowing previously emitted shells to re-intersect the worldline.
 
