--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.0 - Mathematical Style Guide.md
@@ -165,7 +165,7 @@ Plain language: With slightly thick shells, the usual “force is minus gradient
 - $\large q_{\mathrm{eff}}(t_0) = \dfrac{q}{1 + \lvert v_{\text{source}}(t_0)\rvert}$ (per-wavefront amplitude; emission cadence is constant). Receiver velocity affects only instantaneous power $\,\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$.
 - $r$, $\hat{\mathbf{r}}$ as above; $H$ is the Heaviside step function with $H(0)=0$.
 
-Plain language: Fix units so the field speed is one; use ε as the basic charge; faster motion dims per-wavefront amplitude and response, not cadence.
+Plain language: Fix units so the field speed is one; use ε as the basic charge; faster motion dims only the emitter’s per-wavefront amplitude and response, not cadence.
 
 ---
 
