--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.0 - Architrino.md
@@ -41,6 +41,11 @@ $$
 - **Conservation:** $\displaystyle \int_{\mathbb{R}^3}\rho(t,\mathbf{s})\,\mathrm{d}^3s = q$ for all $t>t_0$.
 - **Pointwise scaling on the sphere:** the surface density scales as $q/(4\pi r^2)$, giving the stated $1/r^2$ falloff on the expanding sphere.
 
+Normalization and Jacobians:
+- Radial source representation in spherical coordinates: $q\,\delta(t-t_0)\,\dfrac{\delta(r)}{4\pi r^2}$.
+- Delta change-of-variables identity: $\delta(r - v\,\tau) = \dfrac{1}{v}\,\delta\!\big(\tau - r/v\big)$; the $1/v$ factor appears only when integrating over time at fixed $r$.
+- Normalization check: $\displaystyle \int_{\mathbb{R}^3}\rho(t,\mathbf{s})\,d^3s = q$ for all $t>t_0$ since $\int \dfrac{q}{4\pi r^2}\,\delta(r-v\tau)\,4\pi r^2\,dr = q$.
+
 Plain language: the bigger the sphere gets, the thinner the “potential paint” on it becomes—spread over a larger area—in just the right way to keep the total amount constant.
 
 ---
