--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -39,6 +39,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     $$
 
     Conventions and exclusions:
+    - Geometric normalization factors (e.g., $1/(4\pi)$ and any $1/v$ from $\delta$ change-of-variables) are absorbed into $\kappa$; the canonical per-hit law is written with $\kappa\,|q_o q_{o'}|/r^2$.
     - Heaviside convention $H(0)=0$ (no instantaneous self-force).
     - Exact center hits ($r=0$ with $t>t'$) yield no net directional acceleration (symmetry; measure-zero).
     - Regularization uses the shell $\delta(r-\tau)\to\delta_\eta(r-\tau)$ when continuous-time dynamics are needed.
