--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -1,6 +1,7 @@
 # Action and Interaction
 
 The dynamics of an Architrino are governed by a simple action: an acceleration caused by the intersection of its path with a potential field.
+For detailed derivations and worked explanations, see 00.2.1 — Exposition (walkthroughs index).
 
 Geodesics and dynamics: The background is fixed (absolute time × Euclidean space); free paths are straight. Accelerations come only from delayed, purely radial hits from emitted spheres—never from background curvature.
 
