--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -105,10 +105,11 @@ A crucial dynamic arises from the possibility of self-interaction. An Architrino
 
 From the perspective of the receiving Architrino, the information carried by an intersecting potential sphere is limited. The receiver only knows two things:
 1.  The net strength of the potential at the point of intersection.
-2.  The radial direction from which the potential arrived (i.e., the vector pointing back to the emission point).
+2.  The unoriented line of action through its current position (i.e., one of the two open rays on that line); it does not know the orientation along that line.
 
-It does not have direct knowledge of the source's identity, distance, or velocity. Because the magnitude of an emission is modulated by the emitter's velocity, a single received potential could have multiple possible origins. For example, a weak negative potential arriving along a specific radial could be from a nearby, fast-moving Electrino or a distant, slow-moving one.
+It does not have direct knowledge of the source's identity, distance, or velocity. Because the magnitude of an emission is modulated by the emitter's velocity, a single received potential could have multiple possible origins. For example, a weak negative potential consistent with a given line of action could be from a nearby, fast-moving Electrino or a distant, slow-moving one.
 
-This creates a more profound ambiguity: the receiver cannot distinguish between a negative potential from an Electrino on one side and a positive potential from a Positrino on the opposite side. An acceleration *towards* a point on the radial could be interpreted as attraction to a Positrino at that point, or repulsion from an Electrino located at the diametrically opposite point on the same line.
+This creates a more profound ambiguity: the receiver cannot distinguish between a negative potential from an Electrino on one side and a positive potential from a Positrino on the opposite side. An acceleration *towards* a point along the line of action could be interpreted as attraction to a Positrino at that point, or as repulsion from an Electrino located at the diametrically
+opposite point on the same line.
 
 This ambiguity is compounded by superposition. The net potential at any instant is the sum of all intersecting spheres. A measured potential along a single radial could be the result of a complex confluence of fields from many different emitters located along that line of action, arriving from both directions.
