--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1 - Exposition (walkthroughs index).md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1 - Exposition (walkthroughs index).md
@@ -16,5 +16,6 @@ Contents:
 - [Walkthrough Step 8 — Self-interaction Switch](./00.2.1.8%20-%20Walkthrough%20Step%208%20—%20Self-interaction%20switch.md)
 - [Walkthrough Step 9 — Informational Ambiguity](./00.2.1.9%20-%20Walkthrough%20Step%209%20—%20Informational%20ambiguity.md)
 - [Walkthrough Step 10 — Numerical Recipe and Stability](./00.2.1.10%20-%20Walkthrough%20Step%2010%20—%20Numerical%20recipe%20and%20stability.md)
+- [Walkthrough Step 11 — Emitter-speed modulation and calibration](./00.2.1.11%20-%20Walkthrough%20Step%2011%20—%20Emitter-speed%20modulation%20and%20calibration.md)
 
 Note: The walkthroughs are now hosted in this 00.2.1 section. 00.1.4 — Action remains the canonical law; these walkthroughs elaborate it.
