--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
@@ -1,42 +1,47 @@
- # Mathematical Terminology (Canonical Dialect)
+# Mathematical Terminology (Canonical Dialect)
 
 This table lists the symbols and mathematical terms used across the Geometrical Model of Nature and explains their meaning in this project’s context.
 
 | Symbol / Term | Meaning in this project |
 | --- | --- |
-| 𝓜 = ℝ × ℝ^3 | Absolute timespace: global, oriented time × Euclidean 3-space; no non-degenerate 4D metric. |
-| t | Absolute time (dimensionless after choosing T0); increases globally. |
-| Σ_t | Simultaneity slice at time t: {t} × ℝ^3. |
-| h_{ij} = δ_{ij} | Euclidean spatial metric on Σ_t; implements dot products and norms. |
-| x, s | Spatial position vectors in ℝ^3; vectors are bold, e.g., s(t). |
-| v = ds/dt, a = dv/dt | Velocity and acceleration vectors (boldface by convention). |
-| ‖·‖ | Euclidean norm (length) induced by h_{ij}. |
-| ˆ (hat) | Unit vector; e.g., r̂ = r/‖r‖. |
-| v (field speed) | Propagation speed of spherical shells; set to 1 by units (v=1). |
-| κ > 0 | Universal coupling constant (absorbs geometric normalizations). |
-| ε > 0 | Unit charge magnitude; identified with |e|/6. |
-| q, q′ | Architrino charges (multiples of ±ε) for source and receiver. |
-| σ_{q q′} = sign(q q′) | Interaction sign: +1 like-on-like (repulsion), −1 unlike (attraction). |
-| r, r̂ | Separation and radial direction from source’s emission position to receiver “now.” |
-| t₀, τ = t − t₀ | Causal emission time and delay to reception. |
-| 𝓒_j(t) | Causal set of emission times of source j that reach the receiver at time t. |
-| δ(r − vτ), δ_{S_r} | Surface delta on expanding shell; surface measure on sphere S_r. |
-| δ_η(·) | Mollified (Gaussian) shell with width η > 0 for smooth dynamics. |
-| H(τ) | Heaviside step; convention H(0)=0 (no instantaneous self-kick). |
-| Φ, Φ_η | Potential and mollified potential from superposed shells. |
-| U = q′ Φ_η | Potential energy at a point (mollified; weak limit as η→0). |
-| F = −∇U | Force from the potential (pointwise for Φ_η). |
-| a_{o′←j}(t; t₀) | Per-hit acceleration from source j emitted at t₀ (purely radial, ∝ 1/r²). |
-| q_eff(t₀) = q/(1+|v_j(t₀)|) | Emitter-speed dimmed per-wavefront amplitude; emission cadence is constant. |
-| v_r, v_⊥ | Radial and transverse components of receiver velocity relative to r̂. |
-| d₀, t₀ (emergent) | Minimal binary radius and characteristic fastest period from dynamics. |
-| SS_a(t) | Sphere stream of worldline a at observation time t (union of all causal spheres). |
-| β = |v|/v | Dimensionless speed; with v=1, β=|v|. |
-| Δ | Euclidean Laplacian on Σ_t (Δ = ∂²_x + ∂²_y + ∂²_z). |
-| E(3) | Euclidean group of spatial symmetries (translations ⋊ rotations). |
-| c_max ≡ v | Maximal signal speed (field speed of shells). |
+| $\mathcal{M} = \mathbb{R} \times \mathbb{R}^3$ | Absolute timespace: global, oriented time × Euclidean 3-space; no non-degenerate 4D metric. |
+| $t$ | Absolute time (dimensionless after choosing $T_0$); increases globally. |
+| $\Sigma_t$ | Simultaneity slice at time $t$: $\{t\} \times \mathbb{R}^3$. |
+| $h_{ij} = \delta_{ij}$ | Euclidean spatial metric on $\Sigma_t$; implements dot products and norms. |
+| $\mathbf{x},\, \mathbf{s}$ | Spatial position vectors in $\mathbb{R}^3$; vectors are bold, e.g., $\mathbf{s}(t)$. |
+| $\mathbf{v} = d\mathbf{s}/dt,\ \mathbf{a} = d\mathbf{v}/dt$ | Velocity and acceleration vectors (boldface by convention). |
+| $\lVert\cdot\rVert$ | Euclidean norm (length) induced by $h_{ij}$. |
+| hat (ˆ) | Unit vector; e.g., $\hat{\mathbf{r}} = \mathbf{r}/\lVert\mathbf{r}\rVert$. |
+| $v$ (field speed) | Propagation speed of spherical shells; set to $1$ by units ($v=1$). |
+| $\kappa > 0$ | Universal coupling constant (absorbs geometric normalizations). |
+| $\epsilon > 0$ | Unit charge magnitude; identified with $\lvert e\rvert/6$. |
+| $q,\, q'$ | Architrino charges (multiples of $\pm\epsilon$) for source and receiver. |
+| $\sigma_{q q'} = \mathrm{sign}(q\,q')$ | Interaction sign: $+1$ like-on-like (repulsion), $-1$ unlike (attraction). |
+| $r,\, \hat{\mathbf{r}}$ | Separation and radial direction from source’s emission position to receiver “now.” |
+| $t_0,\ \tau = t - t_0$ | Causal emission time and delay to reception. |
+| $\mathcal{C}_j(t)$ | Causal set of emission times of source $j$ that reach the receiver at time $t$. |
+| $\delta(r - v\tau),\ \delta_{S_r}$ | Surface delta on expanding shell; surface measure on sphere $S_r$. |
+| $\delta_\eta(\cdot)$ | Mollified (Gaussian) shell with width $\eta > 0$ for smooth dynamics. |
+| $H(\tau)$ | Heaviside step; convention $H(0)=0$ (no instantaneous self-kick). |
+| $\Phi,\ \Phi_\eta$ | Potential and mollified potential from superposed shells. |
+| $U = q'\,\Phi_\eta$ | Potential energy at a point (mollified; weak limit as $\eta\to 0$). |
+| $\mathbf{F} = -\nabla U$ | Force from the potential (pointwise for $\Phi_\eta$). |
+| $a_{o'\leftarrow j}(t; t_0)$ | Per-hit acceleration from source $j$ emitted at $t_0$ (purely radial, $\propto 1/r^2$). |
+| $q_{\mathrm{eff}}(t_0) = \dfrac{q}{1+\lvert v_j(t_0)\rvert}$ | Emitter-speed dimmed per-wavefront amplitude; emission cadence is constant. |
+| $v_r,\, v_\perp$ | Radial and transverse components of receiver velocity relative to $\hat{\mathbf{r}}$. |
+| $d_0,\, t_0$ (emergent) | Minimal binary radius and characteristic fastest period from dynamics. |
+| $\mathrm{SS}_a(t)$ | “Sphere stream” of worldline $a$ at observation time $t$ (union of all causal spheres). |
+| $\beta = \lvert v\rvert/v$ | Dimensionless speed; with $v=1$, $\beta = \lvert v\rvert$. |
+| $\Delta$ | Euclidean Laplacian on $\Sigma_t$ ($\Delta = \partial_x^2 + \partial_y^2 + \partial_z^2$). |
+| $E(3)$ | Euclidean group of spatial symmetries (translations ⋊ rotations). |
+| $c_{\max} \equiv v$ | Maximal signal speed (field speed of shells). |
 | EOM | Master Equation of Motion: delayed, purely radial, inverse-square per-hit law. |
+| Mollify / Mollification | Replace distributions by smooth approximations, e.g., $\delta\!\to\!\delta_\eta$ (Gaussian of width $\eta$), to obtain $C^1$ trajectories and well-defined $\nabla\Phi_\eta$. |
+| Regularize / Regularization | The process of introducing $\eta>0$ (or similar) to control singularities; interpret $\eta\to 0$ in the weak/integrated sense. |
+| Normalize / Normalization | Choose constants (e.g., $1/(4\pi r^2)$) and Jacobians so total emission integrates to the source strength $q$; ensures conserved totals. |
+| Change of variables (delta) | Identity $\delta(r - v\tau) = \dfrac{1}{v}\,\delta\!\big(\tau - r/v\big)$; the $1/v$ factor is a Jacobian from variable substitution. |
+| Non-dimensionalize | Choose $L_0, T_0$ so $v=L_0/T_0=1$; all speeds become dimensionless ratios to $v$. |
 
 Notes:
-- Bold symbols denote vectors; hats denote unit vectors; ‖·‖ denotes norms.
-- All speeds are nondimensional after choosing L0, T0 so that v = L0/T0 = 1.
+- Bold symbols denote vectors; hats denote unit vectors; $\lVert\cdot\rVert$ denotes norms.
+- All speeds are nondimensional after choosing $L_0, T_0$ so that $v = L_0/T_0 = 1$.
