--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.5 - Photons and Neutrinos.md
@@ -6,7 +6,7 @@ We work in units with field speed $v=1$ unless stated otherwise.
 
 ## 1) Photons: Neutral Planar Bundles on a Phase-Locked Corridor (“Photon Train”)
 
-Definition (geometric): A photon is a coherent, charge-neutral, propagating bundle of delayed, purely radial per-hit actions organized along a narrow axial corridor. In practice it appears as a phase-locked stack of planar sub-bundles (“planar bosons on the photon train”) emitted by oscillatory sources (e.g., binaries inside assemblies). Emission/absorption are re-coupling events of this corridor to and from internal binaries; no separate gauge-field inventory is required.
+Definition (geometric): A photon is a coherent, charge-neutral, propagating bundle of delayed, purely radial per-hit actions organized along a narrow axial corridor. In practice it appears as a phase-locked stack of planar sub-bundles (“planar bosons on the photon train”) organized by oscillatory constituent architrinos (typically bound in binaries within assemblies). Emission/absorption are re-coupling events among constituent architrinos via internal binaries; no separate gauge-field inventory is required.
 
 - Neutrality and classical character:
   - Net charge is zero at all times; far fields are dominated by transverse oscillations set by path-history geometry. In coherent regimes, photons exhibit classical-beam behavior (“evidence for classical photons”) while retaining packet-like coupling to discrete normal modes.
@@ -29,8 +29,8 @@ Definition (geometric): A photon is a coherent, charge-neutral, propagating bund
 
 - Interaction rules (emergent):
   - Coupling is strongest to assemblies with compatible axial corridors (polar regions of binaries/cores).
-  - Absorption = re-capture of the phase-locked corridor by an internal binary, increasing mode energy or reconfiguring personality architrinos.
-  - Emission = corridor release driven by accelerated neutral or charged subassemblies; bursts form short trains, continuous drives form long trains.
+  - Absorption = corridor re-capture by an internal binary via re-binding of constituent architrinos, increasing mode energy or reconfiguring personality architrinos.
+  - Emission = corridor release driven by accelerated constituent architrinos within subassemblies; bursts form short trains, continuous drives form long trains.
 
 Plain language: A photon is a neutral, phase-locked “train” of planar pushes guided down a narrow tube; polarizers simply project that tube’s sideways wiggle (giving cos²θ), and making or absorbing a photon is the tube locking onto or peeling off an internal rotating pair.
 
