--- a/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
+++ b/Geometrical Model of Nature/10 - Implementation Layer/10.0 - Assemblies/10.0.7 - W and Z Bosons.md
@@ -36,9 +36,9 @@ Conservation: All transfers are implemented as reassignment of personality archi
 ## 3) Emission and Absorption (Geometric Rules)
 
 - Emission:
-  - Triggered by strongly accelerated, asymmetric internal motion near a polar region (e.g., binary mode transitions). A corridor nucleates where the delayed radial pushes add coherently along an axis and then either tethers to a nearby target or departs as a free bundle.
+  - Triggered by strongly accelerated, asymmetric internal motion near a polar region (e.g., binary mode transitions). A corridor nucleates from the superposition of constituent architrinos’ delayed radial pushes that add coherently along an axis and then either tethers to a nearby target or departs as a free bundle.
 - Absorption:
-  - Occurs when a corridor aligns with a compatible polar region; the phase-locked pattern is re-captured, yielding a discrete update of bound personality architrinos and internal mode energies.
+  - Occurs when a corridor aligns with a compatible polar region; the phase-locked pattern is re-captured via constituent architrino re-binding, yielding a discrete update of bound personality architrinos and internal mode energies.
 - Selection rules:
   - Axial and chiral compatibility determine W vs Z channel availability and polarization. Right-hand-rule constructs do not appear; allowed/forbidden couplings follow from path-history geometry and the phase structure of the nested binaries.
 
