--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
@@ -15,7 +15,7 @@ This table lists the symbols and mathematical terms used across the Geometrical 
 | $v$ (field speed) | Propagation speed of spherical shells; set to $1$ by units ($v=1$). |
 | $\kappa > 0$ | Universal coupling constant (absorbs geometric normalizations). |
 | $\epsilon > 0$ | Unit charge magnitude; identified with $\lvert e\rvert/6$. |
-| $q,\, q'$ | Architrino charges (multiples of $\pm\epsilon$) for source and receiver. |
+| $q,\, q'$ | Intrinsic Architrino charges for source and receiver (each equals $\pm\epsilon$). |
 | $\sigma_{q q'} = \mathrm{sign}(q\,q')$ | Interaction sign: $+1$ like-on-like (repulsion), $-1$ unlike (attraction). |
 | $r,\, \hat{\mathbf{r}}$ | Separation and radial direction from source’s emission position to receiver “now.” |
 | $t_0,\ \tau = t - t_0$ | Causal emission time and delay to reception. |
@@ -45,3 +45,4 @@ This table lists the symbols and mathematical terms used across the Geometrical 
 Notes:
 - Bold symbols denote vectors; hats denote unit vectors; $\lVert\cdot\rVert$ denotes norms.
 - All speeds are nondimensional after choosing $L_0, T_0$ so that $v = L_0/T_0 = 1$.
+- Assemblies are dynamical geometries of Architrino transceivers (not point particles). Their effective field/wave behavior is the net superposition of their constituent Architrinos evolving under the equation of motion; any “emission/absorption” attributed to an assembly is shorthand for this superposed dynamics.
