--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
@@ -15,9 +15,9 @@ This table lists the symbols and mathematical terms used across the Geometrical 
 | $v$ (field speed) | Propagation speed of spherical shells; set to $1$ by units ($v=1$). |
 | $\kappa > 0$ | Universal coupling constant (absorbs geometric normalizations). |
 | $\epsilon > 0$ | Unit charge magnitude; identified with $\lvert e\rvert/6$. |
-| $q,\, q'$ | Intrinsic Architrino charges for source and receiver (each equals $\pm\epsilon$). |
+| $q,\, q'$ | Intrinsic architrino charges for source and receiver (each equals $\pm\epsilon$). |
 | $\sigma_{q q'} = \mathrm{sign}(q\,q')$ | Interaction sign: $+1$ like-on-like (repulsion), $-1$ unlike (attraction). |
-| $r,\, \hat{\mathbf{r}}$ | Separation and radial direction from source’s emission position to receiver “now.” |
+| $r,\, \hat{\mathbf{r}}$ | Separation and radial direction from the source’s emission position to the receiver at time $t$ (“now”). |
 | $t_0,\ \tau = t - t_0$ | Causal emission time and delay to reception. |
 | $\mathcal{C}_j(t)$ | Causal set of emission times of source $j$ that reach the receiver at time $t$. |
 | $\delta(r - v\tau),\ \delta_{S_r}$ | Surface delta on expanding shell; surface measure on sphere $S_r$. |
