--- a/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
+++ b/Geometrical Model of Nature/20 - Informational Layer/20.1 - Semantic Interfaces/20.1.1 - Schemas & Conventions/20.1.1.1 - Mathematical Terminology.md
@@ -41,6 +41,22 @@ This table lists the symbols and mathematical terms used across the Geometrical 
 | Normalize / Normalization | Choose constants (e.g., $1/(4\pi r^2)$) and Jacobians so total emission integrates to the source strength $q$; ensures conserved totals. |
 | Change of variables (delta) | Identity $\delta(r - v\tau) = \dfrac{1}{v}\,\delta\!\big(\tau - r/v\big)$; the $1/v$ factor is a Jacobian from variable substitution. |
 | Non-dimensionalize | Choose $L_0, T_0$ so $v=L_0/T_0=1$; all speeds become dimensionless ratios to $v$. |
+| Degenerate / Non-degenerate | Degenerate: determinant zero (e.g., metric not invertible); non-degenerate: invertible. We use no non-degenerate 4D metric; spatial metric $h_{ij}$ is non-degenerate. |
+| Dot product | Euclidean scalar product: $\mathbf{u}\cdot\mathbf{v} = h_{ij}\,u^i v^j$. |
+| Norm | Length from $h_{ij}$: $\lVert \mathbf{v}\rVert = \sqrt{h_{ij} v^i v^j}$. |
+| Coupling | Overall interaction strength set by $\kappa>0$ (absorbs geometric normalizations). |
+| Intrinsic | Property of an object independent of motion or environment (e.g., intrinsic charge $q=\pm\epsilon$). |
+| Causal | Respecting propagation delay; emission time $t_0$ must satisfy $r=v(t-t_0)$ to influence “now.” |
+| Gaussian | The mollifier kernel $\delta_\eta$ used to replace $\delta$, producing smooth shells of width $\eta>0$. |
+| Heaviside | Step function $H(\tau)$; convention $H(0)=0$ (no instantaneous self-kick). |
+| Hit | A causal intersection event: some $t_0\in\mathcal{C}_j(t)$ where a shell reaches the receiver. |
+| Superposition | Linear addition of fields/accelerations from all sources/shells at a point and time. |
+| Transverse | Component orthogonal to $\hat{\mathbf{r}}$; e.g., $\mathbf{v}_\perp$ with $\mathbf{v}_\perp\cdot \hat{\mathbf{r}}=0$. |
+| Radial | Along the line of action $\hat{\mathbf{r}}$ (e.g., $v_r = \mathbf{v}\cdot\hat{\mathbf{r}}$). |
+| Worldline | Time-parameterized path $\mathbf{s}(t)$ of a particle in space; history up to $t_{\text{now}}$ is its provenance. |
+| Laplacian | Spatial second-derivative operator on $\Sigma_t$; in Cartesian frames $\Delta = \partial_x^2 + \partial_y^2 + \partial_z^2$. |
+| Singularity | Idealized divergence (e.g., $1/r^2$ at $r=0$); handled by mollification/weak limits. |
+| Jacobian | Factor from change of variables; e.g., $\delta(r - v\tau) = \dfrac{1}{v}\,\delta\!\big(\tau - r/v\big)$ has Jacobian $1/v$. |
 
 Notes:
 - Bold symbols denote vectors; hats denote unit vectors; $\lVert\cdot\rVert$ denotes norms.
