--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.1 - Path.md
@@ -43,7 +43,7 @@ For a receiver $a$ at time $t$ and a source particle $j$, define the causal set 
 $$
 \mathcal{C}_j(t) = \big\{\, t_0 \le t \;\big|\; \|\mathbf{s}_a(t) - \mathbf{s}_j(t_0)\| = (t - t_0) \,\big\}.
 $$
-When $|\mathbf{v}_j(t_0)| < v$ near a solution, $\mathcal{C}_j(t)$ is typically a singleton (“unique causal time”); when $|\mathbf{v}_j|\ge v$, multiple solutions can occur (multi-hit regime). Self-intersection corresponds to $j=a$ with $t_0<t$.
+When $|\mathbf{v}_j(t_0)| < v$ near a solution, $\mathcal{C}_j(t)$ is typically a singleton (“unique causal time”); when $|\mathbf{v}_j|> v$, multiple solutions can occur (multi-hit regime). Self-intersection corresponds to $j=a$ with $t_0<t$.
 
 Plain language: you feel a push now from source $j$ only if one of its earlier spherical wavefronts has had exactly enough time to reach you; the equation says “distance traveled by the sphere equals the time since it was emitted, times $v$.”
 
