--- a/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.1 - Architrino/00.1.4 - Action.md
@@ -24,7 +24,7 @@ Action occurs when a point object $o'$ at position $\mathbf{s}_{o'}(t)$ intersec
     $$
     \mathcal{C}_o(t) = \big\{\, t' \le t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = (t - t') \,\big\}.
     $$
-    For $|\mathbf{v}_o(t')| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|\ge 1$ it may contain multiple solutions (including self-hits when $o'=o$). In plain language: this set collects all earlier moments of the source that can send a sphere to arrive exactly “now” at the receiver’s current location.
+    For $|\mathbf{v}_o(t')| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|> 1$ it may contain multiple solutions (including self-hits when $o'=o$). In plain language: this set collects all earlier moments of the source that can send a sphere to arrive exactly “now” at the receiver’s current location.
 
 -   **Master Equation of Motion (canonical):** For each $t' \in \mathcal{C}_o(t)$, define
     $$
@@ -95,7 +95,7 @@ while preserving total emission $q_{\text{eff}}$. This produces continuous-in-ti
     $$
     The total acceleration on a particle at any instant is the vector sum of the accelerations from all intersecting potential spheres. Operationally, every Architrino is continuously immersed in the superposed sphere streams of all others (and, when kinematics permit, its own); tractability comes from treating each causal hit independently with $1/r^2$ distance weighting (and emitter-side speed modulation), which makes local sources dominate.
 
--   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction arises when the causal set $\,\mathcal{C}_a(t)\,$ for $o'=o$ is nonempty; this can occur when $|\mathbf{v}_a| \ge v$ at some past time or due to curvature of the path allowing previously emitted shells to re-intersect the worldline.
+-   **Velocity Dependence:** The dynamics are velocity-dependent. Architrinos are transceivers: they emit potential spheres at a constant cadence; only the per-wavefront amplitude is modulated by the emitter’s speed. The receiver’s speed does not change the instantaneous force magnitude; it affects only the work rate via $\mathbf{F}\cdot\mathbf{v} = |\mathbf{F}|\,v_r$. Self-interaction arises when the causal set $\,\mathcal{C}_a(t)\,$ for $o'=o$ is nonempty; this can occur when $|\mathbf{v}_a| > v$ at some past time or due to curvature of the path allowing previously emitted shells to re-intersect the worldline.
 
 ### **Self-Interaction**
 
