--- a/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
+++ b/Geometrical Model of Nature/00 - Foundation Elements/00.2 - Action Exposition and Idealized Examples/00.2.1.3 - Walkthrough Step 3 — Causal set and delay geometry.md
@@ -5,7 +5,9 @@ Existing text excerpt (from 00.1.4 - Action.md):
 >     $$
 >     \mathcal{C}_o(t) = \big\{\, t' \le t \;\big|\; \|\mathbf{s}_{o'}(t) - \mathbf{s}_o(t')\| = (t - t') \,\big\}.
 >     $$
->     For $|\mathbf{v}_o(t')| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|\ge 1$ it may contain multiple solutions (including self-hits when $o'=o$).
+>     For $|\mathbf{v}_o(t')| < 1$ locally, $\mathcal{C}_o(t)$ is generically a singleton; for $|\mathbf{v}_o|> 1$ it may contain multiple solutions (including self-hits when $o'=o$).
+
+Clarification: “Multi-valued” means that, for a fixed observation time $t$, there can be more than one emission time $t'$ that satisfies the causal-distance condition; i.e., $\mathcal{C}_o(t)$ may contain multiple causal roots (e.g., when $|\mathbf{v}_o|> 1$ or for self-hits when $o'=o$). This multiplicity can occur only if the transmitter/source has exceeded field speed at least once; if $|\mathbf{v}_o|<1$ everywhere, $F(t';t)$ is strictly increasing in $t'$ and the retarded root is unique.
 
 Detailed explanation (geometry of delay and roots):
 
@@ -17,9 +19,8 @@ Detailed explanation (geometry of delay and roots):
   - If the source speed is locally sub-field-speed ($\|\mathbf{v}_o(t')\|<1$) and the derivative $\partial_{t'}F(t';t) = -\hat{\mathbf{r}}\!\cdot\!\mathbf{v}_o(t') + 1$ is nonzero at the root, then the implicit function theorem guarantees a unique, smooth root branch near $t$.
   - Intuition: the expanding “light-sphere” intersects the moving source path transversely.
 
-- Multiple roots (super-field-speed or curved paths):
-  - When $\|\mathbf{v}_o\|\ge 1$, the source path can outpace recent shells, allowing several distinct historical points to satisfy the same distance–time constraint (multi-hit regime).
-  - Even with $\|\mathbf{v}_o\|<1$, sufficiently curved or oscillatory motion can produce multiple intersections (e.g., loops that cross the same sphere).
+- Multiple roots (require super-field-speed):
+  - When $\|\mathbf{v}_o\|> 1$ at some emission times, the source can outpace recent shells, allowing several distinct historical points to satisfy the same distance–time constraint (multi-hit regime). If $\|\mathbf{v}_o\|<1$ everywhere, $F(t';t)$ is strictly increasing in $t'$, so at most one causal root exists.
 
 - Conventions at singular cases:
   - We adopt $H(0)=0$ so the instantaneous emission at $t'=t$ does not produce an immediate self-kick.
